--- a/app/src/main/res/layout/fragment_profile_fragement.xml
+++ b/app/src/main/res/layout/fragment_profile_fragement.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".ui.Profiile.ProfileActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,14 +9,16 @@
 
 
 
-        <androidx.cardview.widget.CardView
+
+
+    <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -333,6 +336,11 @@
                             app:layout_constraintTop_toBottomOf="@+id/text9"
                             app:layout_constraintVertical_bias="0.0" />
 
+
+
+
+
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </ScrollView>
 
@@ -341,9 +349,6 @@
         </androidx.cardview.widget.CardView>
 
 
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
