--- a/app/src/main/res/layout/activity_addpatent.xml
+++ b/app/src/main/res/layout/activity_addpatent.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_addpublication"
+        android:id="@+id/toolbar_addpatent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -21,8 +21,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:title="Add Patent"
-        app:navigationIcon="@drawable/ic_navigate_before_black_24dp"/>
+        app:title="add patent"
+        app:titleTextColor="#fff" />
 
 
     <ScrollView
@@ -33,7 +33,7 @@
         android:layout_marginTop="18dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="100dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_addpublication"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_addpatent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/title_id"
+                    android:id="@+id/patenttitle_id"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Patent Title"
@@ -77,7 +77,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />
 
             <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/spinner"
+                android:id="@+id/pspinner"
                 style="@style/Widget.AppCompat.Spinner.Underlined"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -98,10 +98,10 @@
                 android:layout_marginEnd="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner">
+                app:layout_constraintTop_toBottomOf="@+id/pspinner">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/Publication_id"
+                    android:id="@+id/Patentapp_id"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Patent of Application Number"
@@ -120,10 +120,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/Publicationdate_id"
+                    android:id="@+id/Patentdate_id"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Issue Date"
+                    android:focusable="false"
                     android:inputType="textPersonName"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -143,7 +144,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/Publicationurl_id"
+                    android:id="@+id/Patenturl_id"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Patent URL"
@@ -164,7 +165,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/Description_id"
+                    android:id="@+id/pDescription_id"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Description"
@@ -191,7 +192,7 @@
 
 
             <ImageView
-                android:id="@+id/addauthbtn_id"
+                android:id="@+id/addauthbtnpatent_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -204,7 +205,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />
 
             <ListView
-                android:id="@+id/authorslist_id"
+                android:id="@+id/authorslistpatent_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -223,6 +224,7 @@
 
 
     <Button
+        android:id="@+id/psavebtn_id"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Save"
