--- a/app/src/main/res/layout/fragment_view_fragment.xml
+++ b/app/src/main/res/layout/fragment_view_fragment.xml
@@ -11,8 +11,8 @@
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:id="@+id/swipe"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="60dp"
+      android:layout_height="match_parent"
+      android:layout_marginBottom="80dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
@@ -20,8 +20,8 @@
   <ScrollView
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:fillViewport="true"
+      android:layout_height="match_parent"
+
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
@@ -41,6 +41,9 @@
 
     <ListView
         android:id="@+id/listView1"
+        android:clickable="true"
+        android:divider="#000"
+        android:dividerHeight="1.5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip">
@@ -57,8 +60,9 @@
         android:id="@+id/listView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:background="#4A9C67" >
+        android:divider="#000"
+        android:dividerHeight="1.5dp"
+        android:layout_marginTop="10dip">
     </ListView>
 
     <TextView
@@ -72,8 +76,9 @@
         android:id="@+id/listView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:background="#4A9C67" >
+        android:divider="#000"
+        android:dividerHeight="1.5dp"
+        android:layout_marginTop="10dip">
     </ListView>
 
     <TextView
@@ -87,24 +92,36 @@
         android:id="@+id/listView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:background="#4A9C67" >
+        android:divider="#000"
+        android:dividerHeight="1.5dp"
+        android:layout_marginTop="10dip">
     </ListView>
 
-    <Button
-        android:id="@+id/uploadbtn"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/button"
-        android:text="Upload"
-        android:textColor="#fff"
-        android:layout_marginTop="16dp"/>
+
 
 
 
   </LinearLayout>
   </ScrollView>
   </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+  <Button
+      android:id="@+id/uploadbtn"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      android:background="@drawable/button"
+      android:text="Upload"
+      android:textColor="#fff"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="1.0" />
 
 
 
